--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <header>
+    <h1>Liam The Web Developer</h1>
+    <p>Having started some eons ago, Liam could be credited having spawned the words "hello world" onto the internet
+      space itself. From there he pioneered his way past all boundaries possible. </p>
+  </header>
+  <main>
+    <section id="websites">
+      <h2>Websites I've Worked On</h2>
+      <ol>
+        <li>Google.com</li>
+        <li>Netflix.com</li>
+        <li>Amazon.com</li>
+      </ol>
+    </section>
+    <section id="reviews">
+      <h3>Reviews</h3>
+      <ul>
+        <li>"I couldn't reccomend his services more" - Ghandi</li>
+        <li>"His services are spectacular, whoop whoop!" - The Insane Clown Posse</li>
+        <li>"His work ethic is something you can't deny" - Liam O'Reilly</li>
+      </ul>
+    </section>
+    <section id="gallery">
+<figure>
+  <img src="code_640.jpg" alt="code on a computer screen">
+  <figcaption>Only the greatest most optimized code we provide</figcaption>
+</figure>
+<figure>
+  <img src="tapes_640.jpg" alt="casette tapes on a desk">
+  <figcaption>The most modern in technology is used to produce your product</figcaption>
+</figure>
+<figure>
+  <img src="toy_640.jpg" alt="toy computer">
+  <figcaption>Rest assured there's no customer with a demand too large</figcaption>
+</figure>
+    </section>
+  </main>
+  <footer>©2023 - Liam O'Reilly</footer>
 </body>
+
 </html>
